--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,13 @@ body {
 .btn:hover,
 .btn:focus-visible {
     background: #0056b3;
+    
 }
 
 .btn.btn-danger {
     background: #dc3545;
     font-size: 10px;
+    
 }
 
 .btn.btn-danger:hover,
@@ -150,7 +152,7 @@ body {
 }
 
 
-.list li label:hover ~ .btn.btn-danger {
+.list li:hover .btn.btn-danger {
     display: block;
 }
 
